[tool.poetry]
name = "vbb_notification"
version = "0.1.0"
description = ""
authors = ["npujol <naivy.luna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
plyer = "^2.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vbb = 'vbb_notification:cli'